@@ -55,12 +55,16 @@
       \item \code{all.equal(<selfStart>, *)} no longer signals a deprecation
       warning.
 
-      \item \code{formulate(*, response=r)} gives a helpful error message
+      \item \code{reformulate(*, response=r)} gives a helpful error message
       now when \code{length(r) > 1}, thanks to Bill Dunlap's \PR{18281}.
 
       \item Modifying \code{globalCallingHandlers} inside
       \code{withCallingHandlers()} now works or fails correctly, thanks to
       Henrik Bengtsson's \PR{18257}.
+
+      \item \code{hist(<Date>, breaks = "days")} and
+      \code{hist(<POSIXt>, breaks = "secs")}
+      no longer fail for inputs of length 1.
     }
   }
 }
